[package]
name = "nvidia_oc"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "A simple command line tool to overclock Nvidia GPUs using the NVML library on Linux. This supports both X11 and Wayland."
repository = "https://github.com/Dreaming-Codes/nvidia_oc"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
clap_complete = "4.5.8"
nvml-wrapper = "0.10.0"
nvml-wrapper-sys = "0.8.0"
sudo = "0.6.0"
